cmake_minimum_required(VERSION 3.25)
project(C_PROGRAMMING_LANGUAGE_PROBLEMS C)

set(CMAKE_C_STANDARD 11)

add_executable(C_PROGRAMMING_LANGUAGE_PROBLEMS deneme.c chapter_1/1_17/main.c chapter_1/1_19/main.c chapter_1/1_20/main.c chapter_1/1_21/main.c chapter_1/1_22/main.c chapter_1/1_23/main.c chapter_1/1_23/main2.c chapter_1/1_24/main.c chapter_2/2_4/main.c solutions/chapter_5/exercise_5_02/getfloat.c)
